--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -18,7 +18,8 @@ jobs:
           "test_debian:bookworm",
           "test_ubuntu:2004",
           "test_ubuntu:2204",
-          "test_ubuntu:2404"
+          "test_ubuntu:2404",
+          "test_fedora:41"
           ]
     runs-on: ubuntu-latest
     container:
@@ -48,7 +49,8 @@ jobs:
           "test_debian:bookworm",
           "test_ubuntu:2004",
           "test_ubuntu:2204",
-          "test_ubuntu:2404"
+          "test_ubuntu:2404",
+          "test_fedora:41"
           ]
     runs-on: ubuntu-latest
     container:
