--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -8,6 +8,13 @@ LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/../")
 FIND_PACKAGE(CMLIB)
 
 INCLUDE("${CMAKE_CURRENT_LIST_DIR}/TEST.cmake")
+INCLUDE("${CMAKE_CURRENT_LIST_DIR}/test_resources/test_resources.cmake")
+
+TEST_RESOURCES_DOWNLOAD_ENABLE()
+TEST_RESOURCES_DOWNLOAD()
+TEST_RESOURCES_DOWNLOAD_DISABLE()
+
+
 
 TEST_RUN(ARCHIVE)
 TEST_RUN(CACHE)
