--- a/test/DEPENDENCY/cache_control/keywords/CMakeLists.txt
+++ b/test/DEPENDENCY/cache_control/keywords/CMakeLists.txt
@@ -14,8 +14,12 @@ ENDIF()
 
 LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/../../../../")
 FIND_PACKAGE(CMLIB)
+INCLUDE("${CMAKE_CURRENT_LIST_DIR}/../../../transform_git_uri.cmake")
 
-SET(GIT_DOWNLOAD_URI "${CMLIB_REQUIRED_ENV_REMOTE_URL}/cmakelib-test.git")
+TRANSFORM_GIT_URI(
+    URI "${CMLIB_REQUIRED_ENV_REMOTE_URL}/cmakelib-test.git"
+    OUTPUT_VAR GIT_DOWNLOAD_URI
+)
 
 
 
