DOCUMENTATION and typo
DEPENDENCY - tests added

Minor updates, forgotten paths, ...

--- a/test/DEPENDENCY/download_check/fail/unreachable_uris/git_uri_unreachable_https/CMakeLists.txt
+++ b/test/DEPENDENCY/download_check/fail/unreachable_uris/git_uri_unreachable_https/CMakeLists.txt
@@ -9,7 +9,7 @@ IF(NOT DEFINED CMAKE_SCRIPT_MODE_FILE)
     PROJECT(CMLIB_DEPENDENCY_GIT_FAIL_TEST)
 ENDIF()
 
-LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/../../../../../")
+LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/../../../../../../")
 FIND_PACKAGE(CMLIB)
 
 SET(UNREACHABLE_GIT_URI "https://nonexistent.domain.invalid/repo.git")
