--- a/test/COMPONENT/CMakeLists.txt
+++ b/test/COMPONENT/CMakeLists.txt
@@ -3,10 +3,17 @@
 #
 #
 
-IF(NOT  DEFINED CMAKE_SCRIPT_MODE_FILE)
-	CMAKE_MINIMUM_REQUIRED(VERSION 3.18)
-	PROJECT(CMLIB_CACHE_TEST)
+#
+# Some components are not able top run in script mode
+# Lets skip the test then.
+#
+IF(DEFINED CMAKE_SCRIPT_MODE_FILE)
+	MESSAGE(STATUS "Skipping COMPONENT test in script mode")
+	RETURN()
 ENDIF()
+
+CMAKE_MINIMUM_REQUIRED(VERSION 3.18)
+PROJECT(CMLIB_CACHE_TEST)
 
 LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/../../")
 
