--- a/test/DEPENDENCY/download_check/fail/file_uri_directory/CMakeLists.txt
+++ b/test/DEPENDENCY/download_check/fail/file_uri_directory/CMakeLists.txt
@@ -9,7 +9,7 @@ IF(NOT DEFINED CMAKE_SCRIPT_MODE_FILE)
     PROJECT(CMLIB_DEPENDENCY_FILE_URI_DIRECTORY_FAIL_TEST)
 ENDIF()
 
-LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/../../../../../../")
+LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/../../../../../")
 FIND_PACKAGE(CMLIB)
 
 SET(TEST_DIR_PATH "${CMAKE_CURRENT_LIST_DIR}/../../../../test_resources")
