--- a/test/DEPENDENCY/download_check/fail/unreachable_uris/http_uri_unreachable/CMakeLists.txt
+++ b/test/DEPENDENCY/download_check/fail/unreachable_uris/http_uri_unreachable/CMakeLists.txt
@@ -9,7 +9,7 @@ IF(NOT DEFINED CMAKE_SCRIPT_MODE_FILE)
     PROJECT(CMLIB_DEPENDENCY_HTTP_FAIL_TEST)
 ENDIF()
 
-LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/../../../../../")
+LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/../../../../../../")
 FIND_PACKAGE(CMLIB)
 
 SET(UNREACHABLE_HTTP_URI "https://nonexistent.domain.invalid/file.zip")
