--- a/test/DEPENDENCY/download_check/git_revision_validation/test_branch_download/CMakeLists.txt
+++ b/test/DEPENDENCY/download_check/git_revision_validation/test_branch_download/CMakeLists.txt
@@ -14,6 +14,7 @@ ENDIF()
 LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/../../../../../")
 FIND_PACKAGE(CMLIB)
 INCLUDE("${CMAKE_CURRENT_LIST_DIR}/../../../../transform_git_uri.cmake")
+INCLUDE("${CMAKE_CURRENT_LIST_DIR}/../../../../cache_var.cmake")
 
 TRANSFORM_GIT_URI(
     URI "${CMLIB_REQUIRED_ENV_REMOTE_URL}/cmakelib-test.git"
@@ -51,4 +52,10 @@ FUNCTION(TEST_GIT_REVISION_TESTBRANCH_DOWNLOAD)
     FILE(REMOVE_RECURSE "${CMLIB_REQUIRED_ENV_TMP_PATH}")
 ENDFUNCTION()
 
+CACHE_VAR_FORCE_SET(CMLIB_FILE_DOWNLOAD_GIT_ARCHIVE_DISABLE OFF)
 TEST_GIT_REVISION_TESTBRANCH_DOWNLOAD()
+CACHE_VAR_RESTORE(CMLIB_FILE_DOWNLOAD_GIT_ARCHIVE_DISABLE)
+
+CACHE_VAR_FORCE_SET(CMLIB_FILE_DOWNLOAD_GIT_ARCHIVE_DISABLE ON)
+TEST_GIT_REVISION_TESTBRANCH_DOWNLOAD()
+CACHE_VAR_RESTORE(CMLIB_FILE_DOWNLOAD_GIT_ARCHIVE_DISABLE)
