--- a/test/FILE_DOWNLOAD/CMakeLists.txt
+++ b/test/FILE_DOWNLOAD/CMakeLists.txt
@@ -373,7 +373,7 @@ IF(_CMLIB_TEST_GIT_ARCHIVE)
 	GIT_DOWNLOAD_BY_ARCHIVE()
 ENDIF()
 
-TEST_INVALID_CMAKE_RUN(archive_requirements_test
+TEST_INVALID_CMAKE_RUN("${CMAKE_CURRENT_LIST_DIR}/archive_requirements_test"
 	"CMLIB_FILE_DOWNLOAD_GIT_ARCHIVE_ONLY AND\n +CMLIB_FILE_DOWNLOAD_GIT_ARCHIVE_DISABLE are on together! Conflict state!")
 
 FILE(REMOVE_RECURSE "${CMLIB_REQUIRED_ENV_TMP_PATH}")
