--- a/test/COMPONENT/CMakeLists.txt
+++ b/test/COMPONENT/CMakeLists.txt
@@ -17,7 +17,7 @@ PROJECT(CMLIB_CACHE_TEST)
 
 LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/../../")
 
-SET(components CMDEF STORAGE CMUTIL)
+SET(components CMDEF STORAGE CMUTIL CMCONF)
 
 FIND_PACKAGE(CMLIB
 	COMPONENTS ${components}
