Add basic test for ALWAYS_SCRIPT_MODE, TYPO and shorten directory names

--- a/test/TEST_FRAMEWORK/execution_functions/test_run_and_check_output/fatal_error_tests/CMakeLists.txt
+++ b/test/TEST_FRAMEWORK/execution_functions/test_run_and_check_output/fatal_error_tests/CMakeLists.txt
@@ -11,14 +11,40 @@ FIND_PACKAGE(CMLIB REQUIRED)
 
 INCLUDE("${CMAKE_CURRENT_LIST_DIR}/../../../../TEST.cmake")
 
+
+
 ##
 # Test Case 1: Should PASS (fatal error present and matches)
 # We call TEST_RUN_AND_CHECK_OUTPUT directly because we expect it to pass
 #
 FUNCTION(TEST_FATAL_ERROR_CASE_1_SHOULD_PASS)
-	TEST_RUN_AND_CHECK_OUTPUT("test_output_fatal_should_pass"
+	TEST_RUN_AND_CHECK_OUTPUT("should_pass"
 		FATAL_ERROR_MESSAGE "Test fatal error message")
-	MESSAGE(STATUS "TEST_RUN_AND_CHECK_OUTPUT fatal error case 1 (should pass): PASSED")
+ENDFUNCTION()
+
+##
+#
+# Test Case 1: Should PASS (fatal error present and matches) in script mode
+#
+FUNCTION(TEST_FATAL_ERROR_CASE_1_SCRIPT_MODE_SHOULD_PASS)
+	TEST_RUN_AND_CHECK_OUTPUT("should_pass"
+		FATAL_ERROR_MESSAGE "Test fatal error message[^\n]*Mode=SCRIPT"
+		ALWAYS_SCRIPT_MODE ON)
+ENDFUNCTION()
+
+##
+#
+# test Case 1: Should PASS (fatal error present and matches) in project mode
+#
+FUNCTION(TEST_FATAL_ERROR_CASE_1_PROJECT_MODE_SHOULD_PASS)
+	IF(DEFINED CMAKE_SCRIPT_MODE_FILE)
+		SET(mode "SCRIPT")
+	ELSE()
+		SET(mode "PROJECT")
+	ENDIF()
+	TEST_RUN_AND_CHECK_OUTPUT("should_pass"
+		FATAL_ERROR_MESSAGE "Test fatal error message[^\n]*Mode=${mode}"
+		ALWAYS_SCRIPT_MODE OFF)
 ENDFUNCTION()
 
 ##
@@ -33,16 +59,14 @@ FUNCTION(TEST_FATAL_ERROR_CASE_2_SHOULD_FAIL)
 		ERROR_VARIABLE error_output
 		OUTPUT_VARIABLE output
 	)
-	
+
 	IF(result EQUAL 0)
 		MESSAGE(FATAL_ERROR "TEST_RUN_AND_CHECK_OUTPUT should have failed when fatal error missing but didn't")
 	ENDIF()
-	
+
 	IF(NOT error_output MATCHES "Expected FATAL_ERROR message not found")
 		MESSAGE(FATAL_ERROR "TEST_RUN_AND_CHECK_OUTPUT failed for wrong reason: ${error_output}")
 	ENDIF()
-	
-	MESSAGE(STATUS "TEST_RUN_AND_CHECK_OUTPUT fatal error case 2 (should fail): PASSED")
 ENDFUNCTION()
 
 ##
@@ -57,16 +81,14 @@ FUNCTION(TEST_FATAL_ERROR_CASE_3_SHOULD_FAIL)
 		ERROR_VARIABLE error_output
 		OUTPUT_VARIABLE output
 	)
-	
+
 	IF(result EQUAL 0)
 		MESSAGE(FATAL_ERROR "TEST_RUN_AND_CHECK_OUTPUT should have failed when fatal error doesn't match but didn't")
 	ENDIF()
-	
+
 	IF(NOT (error_output MATCHES "Expected FATAL_ERROR message not found"))
 		MESSAGE(FATAL_ERROR "TEST_RUN_AND_CHECK_OUTPUT failed for wrong reason: ${error_output}")
 	ENDIF()
-	
-	MESSAGE(STATUS "TEST_RUN_AND_CHECK_OUTPUT fatal error case 3 (should fail): PASSED")
 ENDFUNCTION()
 
 ##
@@ -74,7 +96,6 @@ ENDFUNCTION()
 # We use EXECUTE_PROCESS because we expect TEST_RUN_AND_CHECK_OUTPUT to fail
 #
 FUNCTION(TEST_FATAL_ERROR_CASE_4_SHOULD_FAIL)
-	MESSAGE(STATUS "OK")
 	EXECUTE_PROCESS(
 		COMMAND ${CMAKE_COMMAND} -P "${CMAKE_CURRENT_LIST_DIR}/fatal_error_case_4_caller.cmake"
 		WORKING_DIRECTORY "${CMAKE_CURRENT_LIST_DIR}"
@@ -82,20 +103,20 @@ FUNCTION(TEST_FATAL_ERROR_CASE_4_SHOULD_FAIL)
 		ERROR_VARIABLE error_output
 		OUTPUT_VARIABLE output
 	)
-	
+
 	IF(result EQUAL 0)
 		MESSAGE(FATAL_ERROR "TEST_RUN_AND_CHECK_OUTPUT should have failed when project succeeds unexpectedly but didn't")
 	ENDIF()
-	
+
 	IF(NOT (error_output MATCHES "Expected FATAL_ERROR message not found"))
 		MESSAGE(FATAL_ERROR "TEST_RUN_AND_CHECK_OUTPUT failed for wrong reason: ${error_output}")
 	ENDIF()
-	
-	MESSAGE(STATUS "TEST_RUN_AND_CHECK_OUTPUT fatal error case 4 (should fail): PASSED")
 ENDFUNCTION()
 
-# Run all test cases
 TEST_FATAL_ERROR_CASE_1_SHOULD_PASS()
+TEST_FATAL_ERROR_CASE_1_SCRIPT_MODE_SHOULD_PASS()
+TEST_FATAL_ERROR_CASE_1_PROJECT_MODE_SHOULD_PASS()
 TEST_FATAL_ERROR_CASE_2_SHOULD_FAIL()
 TEST_FATAL_ERROR_CASE_3_SHOULD_FAIL()
 TEST_FATAL_ERROR_CASE_4_SHOULD_FAIL()
+
