--- a/test/TEST_FRAMEWORK/execution_functions/test_run_and_check_output/fatal_error_tests/should_pass/CMakeLists.txt
+++ b/test/TEST_FRAMEWORK/execution_functions/test_run_and_check_output/fatal_error_tests/should_pass/CMakeLists.txt
@@ -10,4 +10,9 @@ IF(NOT DEFINED CMAKE_SCRIPT_MODE_FILE)
 	PROJECT(FATAL_ERROR_PASS_TEST)
 ENDIF()
 
-MESSAGE(FATAL_ERROR "Test fatal error message")
+IF(DEFINED CMAKE_SCRIPT_MODE_FILE)
+	SET(_mode "SCRIPT")
+ELSE()
+	SET(_mode "PROJECT")
+ENDIF()
+MESSAGE(FATAL_ERROR "Test fatal error message. Mode=${_mode}")
