--- a/test/TEST_FRAMEWORK/execution_functions/test_run_and_check_output/warning_tests/should_pass/CMakeLists.txt
+++ b/test/TEST_FRAMEWORK/execution_functions/test_run_and_check_output/warning_tests/should_pass/CMakeLists.txt
@@ -10,4 +10,9 @@ IF(NOT DEFINED CMAKE_SCRIPT_MODE_FILE)
 	PROJECT(WARNING_PASS_TEST)
 ENDIF()
 
-MESSAGE(WARNING "Test warning message")
+IF(DEFINED CMAKE_SCRIPT_MODE_FILE)
+	SET(_mode "SCRIPT")
+ELSE()
+	SET(_mode "PROJECT")
+ENDIF()
+MESSAGE(WARNING "Test warning message. Mode=${_mode}")
